data/derived/fa15/progs/unify/prog3955.ml.out
Characters 77-88:
  | h::t -> matchHeads (explode w);;
                       ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string list
       Type char is not compatible with type string 
